# AItrika

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ai.py  api.py  app.py  app_ai.py  env.example  local.py  main.py  naive.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.streamlit/: config.toml
STUFF/: NAIVE - NEW SCRIPT.ipynb  OPENAI - NEW SCRIPT.ipynb  app_naive.py  requirements.txt  utilities_ai.py  utilities_naive.py
aitrika/: app.py  main.py
aitrika/base/: aitrika_base.py
aitrika/config/: config.py
aitrika/engine/: aitrika.py  online_aitrika.py
aitrika/extractors/: llm_extractor.py  pdf_extractor.py  pubmed_extractor.py  text_extractor.py
aitrika/llm/: anthropic.py  anyscale.py  base_llm.py  groq.py  huggingface.py  llm.py  neutrino.py  ollama.py  openai.py
aitrika/local/: local_aitrika.py
aitrika/online/: online_aitrika.py
aitrika/prompts/: acknowledgments.tmpl  bibliography.tmpl  characteristics_of_participants.tmpl  effect_sizes.tmpl  interventions.tmpl  introduction.tmpl  methods.tmpl  number_of_participants.tmpl  outcomes.tmpl  paper_results.tmpl  prompts.py  results.tmpl
aitrika/utils/: load_spacy_model.py  loader.py  prompt_loader.py  text_parser.py
cura/engine/: cura.py
cura/llm/: huggingface.py  neutrino.py
cura/prompts/: prompts.py
cura/utils/: text_parser.py
docs/: installation.mdx  introduction.mdx  mint.json  mkdocs.yml  quickstart.mdx
docs/aitrika/: usage.mdx
docs/api/: introduction.mdx  openapi.json
docs/api-reference/: introduction.mdx  openapi.json
docs/api-reference/endpoint/: abstract.mdx  outcomes.mdx  participants.mdx  query.mdx  results.mdx
docs/api/endpoint/: create.mdx
docs/docs/: engine.md  index.md  llms.md
docs/installation/: install.mdx  set_api_key.mdx
docs/site/: 404.html  index.html  objects.inv
docs/site/engine/: index.html
docs/site/llms/: index.html
pubgpt/: app.py  local.py  main.py  online.py  requirements.txt  vllm_test.py
pubgpt/.streamlit/: config.toml
pubgpt/32819603/: genes.csv
pubgpt/llm/: cohere.py  falcon.py  groq.py  openai.py  pre_prompt.py  prompts.py  starcoder.py  utils.py  zephyr.py
pubgpt/llm_parser/: cohere.py  falcon.py  llama2.py  ollama.py  openai.py  starcoder.py
pubgpt/online_parser/: article_parser.py
pubgpt/parser/: article_parser.py  cohere.py  openai.py
pubgpt/pdf_parser/: article_parser.py  cohere.py  falcon.py  openai.py  starcoder.py  utils.py  zephyr.py
pubgpt/pubgpt/: content.xml  main.py
pubgpt/pubgpt/32819603/: diseases.csv  document.txt
pubgpt/pubgpt/parser/: article_parser.py
pubgpt/utils/: prompt_llm.txt  prompt_template.txt  utils.py
pubgpt/vector_db/: index.faiss  index.pkl
tests/llm_parser/: __init__.py  test_falcon.py
