[tool.poetry]
name = "aitrika"
version = "0.3.3"
description = "Enhance your knowledge in medical research."
authors = ["Danilo Palumbo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index-embeddings-huggingface = "^0.2.0"
bio = "^1.7.0"
pypdf2 = "^3.0.1"
llama-index-llms-groq = "^0.1.3"
yaspin = "^3.0.2"
python-dotenv = "^1.0.1"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.0"
llama-index-llms-ollama = "^0.1.3"
llama-index-llms-huggingface = "^0.1.5"
spacy = "^3.7.4"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
llama-index = "^0.10.36"
streamlit = "^1.34.0"



[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

