[tool.poetry]
name = "aitrika"
version = "0.3.7"
description = "Enhance your knowledge in medical research."
authors = ["Danilo Palumbo"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

bio = "^1.7.0"
pypdf2 = "^3.0.1"
yaspin = "^3.0.2"
python-dotenv = "^1.0.1"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.0"
llama-index = "^0.10.36"
llama-index-llms-groq = "^0.1.3"
llama-index-llms-ollama = "^0.1.3"
llama-index-llms-huggingface = "^0.1.5"
llama-index-llms-anyscale = "^0.1.4"
llama-index-llms-anthropic = "^0.1.14"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-vector-stores-lancedb = "^0.1.3"
spacy = "^3.7.4"
streamlit = "^1.34.0"



[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

